--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Live University</title>
+    <link rel="stylesheet" href="app.css">
+    <script src="index.js"></script>
 </head>
 <body>
+    <main>
+        <aside></aside>
+        <section></section>
+    </main>
     
 </body>
 </html>
