--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
 </head>
 <body>
     <main>
+        <header>
+            <h2 id="teacher-name">Ricardo Barato</h2>
+            <h4 id="live-uni">Live University</h4>
+            <div id="foto"></div>
+
+        </header>
         <aside></aside>
-        <section></section>
+        <section>
+            <div id="head-section"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
     </main>
     
 </body>
