color setted shadows choosed

--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
 <body>
     <main>
         <header>
-            <h2 id="teacher-name">Ricardo Barato</h2>
+            <h2 id="teacher-name" class="font-blue">Ricardo Barato</h2>
             <h4 id="live-uni">Live University</h4>
             <div id="foto"></div>
 
         </header>
-        <aside></aside>
-        <section>
-            <div id="head-section"></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
+        <aside class="shadow"></aside>
+        <section class="shadow">
+            <div id="head-section"></div><br>
+            <div class="materia"></div>
+         
     </main>
     
 </body>
