main color changed &  logo added

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             <div id="foto"></div>
 
         </header>
-        <aside class="shadow"></aside>
+        <aside class="shadow">
+         <a href="https://liveuniversity.com/ " target="_blank"><img id="livelogo"src="./livelogo.png" alt="logo e link para home page"></a>  
+        </aside>
         <section class="shadow">
-            <div id="head-section"></div><br>
+            <div id="head-section"></div>
             <div class="materia"></div>
-         
+        </section> 
     </main>
     
 </body>
