alignin elements from the materia div

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
                 <div id="curso">
                     <h5>Práticas de compras</h5>
                     <p>Legenda sobre o curso</p>
-                   
                 </div>
+                <div>
+                    <p>Colaboradores:15/30</p>
+                </div>
+            <button>ABRIR</button>    
             </div>
         </section> 
     </main>
