--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             <div class="materia">
                 <div id="data-curso">03 AGO</div>
                 <div id="curso">
-                    <h5>Práticas de compras</h5>
-                    <p>Legenda sobre o curso</p>
+                    
+                    <p> <h3>14 práticas de compras</h3>
+                        Legenda sobre o curso</p>
                 </div>
                 <div>
                     <p>Colaboradores:15/30</p>
                 </div>
-            <button>ABRIR</button>    
+            <button class="btn-abrir">ABRIR</button>    
             </div>
         </section> 
     </main>
