--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <p>Legenda sobre o curso</p>
             </div>
             
-            <div class="materia__colaboradores">Colaboradores: <span class="materia__colaboradores-elementos"><span class="materia__colaboradores-elementos">15</span> < /span> / 30</div>
+            <div class="materia__colaboradores">Colaboradores:<span class="materia__colaboradores-elementos">15</span> / 30</div>
             
             <button class="materia__btn--abrir">ABRIR</button>    
         </div>    
