first and second rows of section done

--- a/checklist.html
+++ b/checklist.html
@@ -45,8 +45,8 @@
           <p class="Section__Frsubt">03 Agostos de 2018</p>
           </div>   
           <div class="Section__scndRow">
-              <button class="Section__btn-chelst">checklist</button>
-              <button class="Section__btn-download"> baixar conteudo</button>
+       <button class="Section__btn-cheklst"><img class="image-btn" src="./images/btn_checklist.png" alt="botao checklist"></button>  
+              <button class="Section__btn-download"> <img class="image-btn" src="./images/btn_baixarConteudo.png" alt="botao download"></button>
           </div>
                <div class="Section__thrdRow">
                   <span>Colaboradores</span> 
