--- a/checklist.html
+++ b/checklist.html
@@ -83,13 +83,9 @@
                           <p class="Section__4thRow-charge">Live Universituy</p>
                         </span> 
 
-                    <button class="Section__btn-openClose">
-                     <img class="image-btn" src="./images/btn-abrir.png" alt="botao checklist">
-                    </button> 
+                    <button class="Section__btn-openClose"></button> 
 
-                    <button class="Section__btn-openClose"> 
-                    <img class="image-btn" src="./images/btn-remover.png" alt="botao download">
-                    </button>
+                    <button class="Section__btn-openClose"></button> 
                </div>
                <!--1ºfileira-->
                <div class="Section__4thRow">
@@ -106,13 +102,9 @@
                       <p class="Section__4thRow-charge">Live Universituy</p>
                     </span> 
 
-                <button class="Section__btn-openClose">
-                 <img class="image-btn" src="./images/btn-abrir.png" alt="botao checklist">
-                </button> 
+                    <button class="Section__btn-openClose"></button> 
 
-                <button class="Section__btn-openClose"> 
-                <img class="image-btn" src="./images/btn-remover.png" alt="botao download">
-                </button>
+                    <button class="Section__btn-openClose"></button> 
            </div>
            <!--2ºfileira-->
            <div class="Section__4thRow">
@@ -129,13 +121,9 @@
                   <p class="Section__4thRow-charge">Live Universituy</p>
                 </span> 
 
-            <button class="Section__btn-openClose">
-             <img class="image-btn" src="./images/btn-abrir.png" alt="botao checklist">
-            </button> 
+                <button class="Section__btn-openClose"></button> 
 
-            <button class="Section__btn-openClose"> 
-            <img class="image-btn" src="./images/btn-remover.png" alt="botao download">
-            </button>
+                <button class="Section__btn-openClose"></button> 
        </div>
         <!--3ºfileira-->
        <div class="Section__4thRow">
@@ -152,13 +140,9 @@
               <p class="Section__4thRow-charge">Live Universituy</p>
             </span> 
 
-        <button class="Section__btn-openClose">
-         <img class="image-btn" src="./images/btn-abrir.png" alt="botao checklist">
-        </button> 
+            <button class="Section__btn-openClose"></button>  
 
-        <button class="Section__btn-openClose"> 
-        <img class="image-btn" src="./images/btn-remover.png" alt="botao download">
-        </button>
+            <button class="Section__btn-openClose"></button> 
    </div>
          
         </section> 
