--- a/checklist.html
+++ b/checklist.html
@@ -50,7 +50,13 @@
           <p class="Section__Frsubt">03 Agostos de 2018</p>
           </div>   
           <div class="Section__scndRow">
-              <button class="Section__btn-cheklst"></button>  
+              <button class="Section__btn-cheklst"></button>
+              <div class="dropdown">
+                <input type="checkbox" name="introdução 1">
+                <span>
+                 <h4> Introdução 1</h4>
+                </span>
+              </div>
               <button class="Section__btn-download"> 
           
             </button>
@@ -83,9 +89,9 @@
                           <p class="Section__4thRow-charge">Live Universituy</p>
                         </span> 
 
-                    <button class="Section__btn-openClose"></button> 
+                    <button class="Section__btn-open"></button> 
 
-                    <button class="Section__btn-openClose"></button> 
+                    <button class="Section__btn-remove"></button> 
                </div>
                <!--1ºfileira-->
                <div class="Section__4thRow">
@@ -102,9 +108,8 @@
                       <p class="Section__4thRow-charge">Live Universituy</p>
                     </span> 
 
-                    <button class="Section__btn-openClose"></button> 
-
-                    <button class="Section__btn-openClose"></button> 
+                    <button class="Section__btn-open"></button> 
+                    <button class="Section__btn-remove"></button> 
            </div>
            <!--2ºfileira-->
            <div class="Section__4thRow">
@@ -121,9 +126,8 @@
                   <p class="Section__4thRow-charge">Live Universituy</p>
                 </span> 
 
-                <button class="Section__btn-openClose"></button> 
-
-                <button class="Section__btn-openClose"></button> 
+                <button class="Section__btn-open"></button> 
+                <button class="Section__btn-remove"></button> 
        </div>
         <!--3ºfileira-->
        <div class="Section__4thRow">
@@ -140,9 +144,8 @@
               <p class="Section__4thRow-charge">Live Universituy</p>
             </span> 
 
-            <button class="Section__btn-openClose"></button>  
-
-            <button class="Section__btn-openClose"></button> 
+            <button class="Section__btn-open"></button> 
+            <button class="Section__btn-remove"></button> 
    </div>
          
         </section> 
