--- a/checklist.html
+++ b/checklist.html
@@ -11,9 +11,14 @@
 </head>
 <body>
 <main class="content">
-  <div class="logo">
-    
-  </div>  
+  
+  <div class="row1">
+    <div class="logo"><a href="https://liveuniversity.com/"></a></div> 
+    <button class="colab"></button>
+    <button class="cursos"></button>
+</div>
+
+ 
 
 
 </main>
