responsiveness off head done

--- a/checklist.html
+++ b/checklist.html
@@ -7,17 +7,16 @@
   <title>checklist</title>
   <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="./botoes.css">
-  <link rel="stylesheet" href="./responsivo.css">
 </head>
 <body>
 <main class="content">
-  
-  <div class="row1">
-    <div class="logo"><a href="https://liveuniversity.com/"></a></div> 
+  <!--mobile-->
+  <div class="row1mob">
+    <a class="logo" href="https://liveuniversity.com/" target="_blank"></a> 
     <button class="colab"></button>
     <button class="cursos"></button>
 </div>
-
+ <!--mobile-->
  
 
 
