--- a/checklist.html
+++ b/checklist.html
@@ -17,7 +17,13 @@
     <button class="cursos"></button>
 </div>
  <!--mobile-->
- 
+ <div class="row2">
+   <div class="profnome">
+     <h3 class="ric">Ricardo Barato</h3>
+     <h4 class="liv">Live university</h4>   
+   </div>
+   <div class="profoto"></div>
+ </div>
 
 
 </main>
