--- a/checklist.html
+++ b/checklist.html
@@ -24,8 +24,17 @@
    </div>
    <div class="profoto"></div>
  </div>
+ <section>
+ <div class="row3">
+  <div class="sectionhead">
+    <h3 class="tittle">14 Práticas de Negociação</h3>
+    <h4 class="subtittle">03 de agosto de 2018</h4>   
+  </div>
+  <button class="checklist-btn"></button>
+  <button class="download-btn"></button>
+</div>
 
-
+</section>
 </main>
 
   <!--javascript-->
