html of checkbox created

--- a/checklist.html
+++ b/checklist.html
@@ -27,10 +27,32 @@
  <section>
  <div class="row3">
   <div class="sectionhead">
-    <h3 class="tittle">14 Práticas de Negociação</h3>
-    <h4 class="subtittle">03 de agosto de 2018</h4>   
+    <h4 class="tittle">14 Práticas de Negociação</h4>
+    <h5 class="subtittle">03 de agosto de 2018</h5>   
   </div>
   <button class="checklist-btn"></button>
+  <div class="dropdown-content">
+    <a href="#">
+      <input type="checkbox" checked="checked">
+      <h4>instrução 1</h4>
+      <p>Algumas observações sobre essa instrução</p>
+    </a>
+    <a href="#">
+        <input type="checkbox" checked="checked">
+        <h4>instrução 2</h4>
+        <p>Algumas observações sobre essa instrução</p>
+    </a>
+    <a href="#">
+        <input type="checkbox" checked="checked">
+        <h4>instrução 3</h4>
+        <p>Algumas observações sobre essa instrução</p>
+    </a>
+    <a href="#">
+        <input type="checkbox" checked="checked">
+        <h4>instrução 4</h4>
+        <p>Algumas observações sobre essa instrução</p>
+    </a>  
+  </div>
   <button class="download-btn"></button>
 </div>
 
