--- a/checklist.html
+++ b/checklist.html
@@ -30,31 +30,20 @@
     <h4 class="tittle">14 Práticas de Negociação</h4>
     <h5 class="subtittle">03 de agosto de 2018</h5>   
   </div>
+ 
   <button class="checklist-btn"></button>
+  
   <div class="dropdown-content">
-    <a href="#">
-      <input type="checkbox" checked="checked">
-      <h4>instrução 1</h4>
-      <p>Algumas observações sobre essa instrução</p>
-    </a>
-    <a href="#">
+      <label class="container">
+          <h4 class="checklist-tt">instrução 1</h4>
+          <p class="checklist-st">Algumas observações sobre essa instrução</p>
         <input type="checkbox" checked="checked">
-        <h4>instrução 2</h4>
-        <p>Algumas observações sobre essa instrução</p>
-    </a>
-    <a href="#">
-        <input type="checkbox" checked="checked">
-        <h4>instrução 3</h4>
-        <p>Algumas observações sobre essa instrução</p>
-    </a>
-    <a href="#">
-        <input type="checkbox" checked="checked">
-        <h4>instrução 4</h4>
-        <p>Algumas observações sobre essa instrução</p>
-    </a>  
-  </div>
-  <button class="download-btn"></button>
-</div>
+        <span class="checkmark"></span>
+      </label>
+  </div>  
+ 
+    <button class="download-btn"></button>
+
 
 </section>
 </main>
