--- a/checklist.html
+++ b/checklist.html
@@ -30,9 +30,8 @@
     <h4 class="tittle">14 Práticas de Negociação</h4>
     <h5 class="subtittle">03 de agosto de 2018</h5>   
   </div>
- 
-  <button class="checklist-btn"></button>
-  
+ <div class="dropdown">
+  <button class="checklist-btn">
   <div class="dropdown-content">
       <label class="container">
           <h4 class="checklist-tt">instrução 1</h4>
@@ -40,7 +39,9 @@
         <input type="checkbox" checked="checked">
         <span class="checkmark"></span>
       </label>
-  </div>  
+  </div>
+</button>  
+</div>
  
     <button class="download-btn"></button>
 
