--- a/checklist.html
+++ b/checklist.html
@@ -24,29 +24,29 @@
    </div>
    <div class="profoto"></div>
  </div>
+
  <section>
  <div class="row3">
   <div class="sectionhead">
     <h4 class="tittle">14 Práticas de Negociação</h4>
     <h5 class="subtittle">03 de agosto de 2018</h5>   
   </div>
- <div class="dropdown">
-  <button class="checklist-btn">
-  <div class="dropdown-content">
-      <label class="container">
-          <h4 class="checklist-tt">instrução 1</h4>
-          <p class="checklist-st">Algumas observações sobre essa instrução</p>
-        <input type="checkbox" checked="checked">
-        <span class="checkmark"></span>
-      </label>
-  </div>
-</button>  
-</div>
- 
-    <button class="download-btn"></button>
+  <button onclick="removerDropdown()" class="checklist-btn"></button>
+  <button class="download-btn"></button> 
+ </div>
 
+ <div id="row-dropdown">
+ <label class="container">
+      <h4 class="checklist-tt">instrução 1</h4>
+      <p class="checklist-st">Algumas observações sobre essa instrução</p>
+    <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </label> 
+</div>
 
 </section>
+
+
 </main>
 
   <!--javascript-->
