--- a/checklist.html
+++ b/checklist.html
@@ -31,7 +31,7 @@
     <h4 class="tittle">14 Práticas de Negociação</h4>
     <h5 class="subtittle">03 de agosto de 2018</h5>   
   </div>
-  <button onclick="removerDropdown()" class="checklist-btn"></button>
+  <button  class="checklist-btn"></button>
   <button class="download-btn"></button> 
  </div>
 
