have to understand why just one check mark works

--- a/checklist.html
+++ b/checklist.html
@@ -36,11 +36,21 @@
  </div>
   
  <label id="dropdown" class="container">
+   <div class="checklist">
       <h4 class="checklist-tt">instrução 1</h4>
       <p class="checklist-st">Algumas observações sobre essa instrução</p>
     <input type="checkbox" checked="checked">
     <span class="checkmark"></span>
+  </div>
+  
+  <div class="checklist">
+      <h4 class="checklist-tt">instrução 2</h4>
+      <p class="checklist-st">Algumas observações sobre essa instrução</p>
+    <input type="checkbox" checked="checked">
+    <span class="checkmark"></span>
+  </div>
  </label> 
+ 
 
 </section>
 
